feat(core) : implementasi API & swagger documentation untuk Master bidang, jabatan, pegawai, & ttd digital
