# Modules/Core/routes/api.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\Api\MasterPegawaiController;
 use App\Http\Controllers\Api\MasterJabatanController;
 use App\Http\Controllers\Api\MasterBidangController;
 use App\Http\Controllers\Api\MasterTtdDigitalController;
+use App\Http\Controllers\Api\AuthController;
 
 Route::middleware(['auth:sanctum'])->prefix('v1')->group(function () {
     Route::apiResource('cores', CoreController::class)->names('core');
@@ -14,3 +15,5 @@ Route::middleware(['auth:sanctum'])->prefix('v1')->group(function () {
     Route::apiResource('master-bidang', MasterBidangController::class);
     Route::apiResource('master-ttd-digital', MasterTtdDigitalController::class);
 });
+
+Route::post('v1/login', [AuthController::class, 'login']);
