# storage/api-docs/api-docs.json
@@ -15,25 +15,71 @@
         }
     ],
     "paths": {
-        "/api/v1/master-bidang": {
+        "/login": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login user (MasterPegawai)",
+                "operationId": "a3674f0652b564b652bd25c2326691d7",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "admin@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Login sukses, return token"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/master-bidang": {
             "get": {
                 "tags": [
                     "MasterBidang"
                 ],
                 "summary": "List semua bidang",
-                "operationId": "32bda03dd3c9f257cd3a846a6fb8f511",
+                "operationId": "1e58580d88d989e330945619bc3805db",
                 "responses": {
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
                     "MasterBidang"
                 ],
                 "summary": "Tambah bidang",
-                "operationId": "49fe2406709385aca8e79ed7bece7288",
+                "operationId": "dd8e1522f9b20afffb9959731ff993e8",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -44,16 +90,21 @@
                     "201": {
                         "description": "Created"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
-        "/api/v1/master-bidang/{id}": {
+        "/master-bidang/{id}": {
             "get": {
                 "tags": [
                     "MasterBidang"
                 ],
                 "summary": "Detail bidang",
-                "operationId": "52f6b3488a39f96d2bf7a59f886922dd",
+                "operationId": "aad5c48c232ce1cbbfa2df39189480c3",
                 "parameters": [
                     {
                         "name": "id",
@@ -68,14 +119,19 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
                     "MasterBidang"
                 ],
                 "summary": "Update bidang",
-                "operationId": "fc4072d4c945f864d9e5b8ac6671ae72",
+                "operationId": "2c7423dc0054cbea83242f7097fde377",
                 "parameters": [
                     {
                         "name": "id",
@@ -96,14 +152,19 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
                     "MasterBidang"
                 ],
                 "summary": "Hapus bidang",
-                "operationId": "4ef79a8601b5dfd65534cf5438db5128",
+                "operationId": "75a26e6583ce917b5ef4fb0d5586b62a",
                 "parameters": [
                     {
                         "name": "id",
@@ -118,28 +179,38 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
-        "/api/v1/master-jabatan": {
+        "/master-jabatan": {
             "get": {
                 "tags": [
                     "MasterJabatan"
                 ],
                 "summary": "List semua jabatan",
-                "operationId": "0d9d9033fb8b8d8c684ddd1e080e0291",
+                "operationId": "fc26eedc69e2c22b341612c61fb21154",
                 "responses": {
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
                     "MasterJabatan"
                 ],
                 "summary": "Tambah jabatan",
-                "operationId": "a7c03ec6bf3b34468e4a25941505bad8",
+                "operationId": "727ce5cbf9f1551cd4c39573c5e6a85f",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -150,16 +221,21 @@
                     "201": {
                         "description": "Created"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
-        "/api/v1/master-jabatan/{id}": {
+        "/master-jabatan/{id}": {
             "get": {
                 "tags": [
                     "MasterJabatan"
                 ],
                 "summary": "Detail jabatan",
-                "operationId": "5de64312e4e819d3e82e5061c6dd9172",
+                "operationId": "8c23f89d2172f5f696d769ace0fc7a59",
                 "parameters": [
                     {
                         "name": "id",
@@ -174,14 +250,19 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
                     "MasterJabatan"
                 ],
                 "summary": "Update jabatan",
-                "operationId": "1886a5017c9e76b6b6cbf02f6355f5c6",
+                "operationId": "e817a90706c422a34f70e2bb63a57b4a",
                 "parameters": [
                     {
                         "name": "id",
@@ -202,14 +283,19 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
                     "MasterJabatan"
                 ],
                 "summary": "Hapus jabatan",
-                "operationId": "0cdf4ca36175416c2d1d5fe303f9927d",
+                "operationId": "349b1cb33933369a1806e67f60306e8d",
                 "parameters": [
                     {
                         "name": "id",
@@ -224,28 +310,38 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
-        "/api/v1/master-pegawai": {
+        "/master-pegawai": {
             "get": {
                 "tags": [
                     "MasterPegawai"
                 ],
                 "summary": "List semua pegawai",
-                "operationId": "6445e9214536b5a2322d58f45fd2ed5c",
+                "operationId": "454a6cd93ceba7ec850bc2ad149612d6",
                 "responses": {
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
                     "MasterPegawai"
                 ],
                 "summary": "Tambah pegawai",
-                "operationId": "3b4af97856461edcec19936abb0ef0a7",
+                "operationId": "e962a82bfc2a9dafe1f7abe25ca9865f",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -256,16 +352,21 @@
                     "201": {
                         "description": "Created"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
-        "/api/v1/master-pegawai/{id}": {
+        "/master-pegawai/{id}": {
             "get": {
                 "tags": [
                     "MasterPegawai"
                 ],
                 "summary": "Detail pegawai",
-                "operationId": "8aa88eda52877d0880a01f25208edb4c",
+                "operationId": "69b788b6a0770ff5bf8fd4c496073780",
                 "parameters": [
                     {
                         "name": "id",
@@ -280,14 +381,19 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
                     "MasterPegawai"
                 ],
                 "summary": "Update pegawai",
-                "operationId": "22a47b4482aff0981e28c53e98c5b064",
+                "operationId": "f0699a9fdf7622ad5500eeab66423725",
                 "parameters": [
                     {
                         "name": "id",
@@ -308,14 +414,19 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
                     "MasterPegawai"
                 ],
                 "summary": "Hapus pegawai",
-                "operationId": "fa9bb92034f26a8e4c86604145a5e2c2",
+                "operationId": "f43c2809893bf90ca7b9827b5bb3d892",
                 "parameters": [
                     {
                         "name": "id",
@@ -330,7 +441,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/v1/master-ttd-digital": {
@@ -440,7 +556,20 @@
             }
         }
     },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
+        }
+    },
     "tags": [
+        {
+            "name": "Auth",
+            "description": "API Authentication"
+        },
         {
             "name": "MasterBidang",
             "description": "API Master Bidang"
